service/service-envoy.yaml
stats_sinks:
- name: "envoy.statsd"
  config:
    tcp_cluster_name: "statsd-exporter"
    prefix: service1
static_resources:
  listeners:
  - name: "service1-listener"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          use_remote_address: true
          add_user_agent: true
          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/stdout
              format: "[ACCESS_LOG][%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" \"%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\"\n"
          codec_type: http2
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: local_service
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8080

  - name: "statsd-exporter"
    connect_timeout: "0.25s"
    type: strict_dns
    lb_policy: round_robin 
    hosts:
    - socket_address:
        address: "statsd_exporter"
        port_value: 9125

admin:
  access_log_path: "/tmp/service_log.txt"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
